--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         display: flex;
         width: 550px;
         height: 370px;
-        margin: 25%;
+        margin: 10% 25%;
       }
 
       .item {
