updating the styles

--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
         background-color: whitesmoke;
         border-radius: 20px;
         display: flex;
-        width: 550px;
         height: 370px;
         margin: 10% 25%;
+        min-width: 470px;
+        max-width: 650px;
+
       }
 
       .item {
