change background color of container div to white

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     @media(min-width:376px) {
       .container {
-        background-color: whitesmoke;
+        background-color: white;
         border-radius: 20px;
         display: flex;
         height: 370px;
@@ -154,7 +154,7 @@
 
     @media (max-width:375px) {
       .container {
-        background-color: whitesmoke;
+        background-color: white;
         display: flex;
         flex-direction: column;
         width: 90%;
