added box-shadow to container div

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     @media(min-width:376px) {
       .container {
         background-color: white;
+        box-shadow: 20px 20px 20px  whitesmoke;
         border-radius: 20px;
         display: flex;
         height: 370px;
@@ -147,6 +148,7 @@
       .two {
         padding-left: 40px;
         min-width: 55%;
+        
       }
 
       
