--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <main class="container">
     <div class="item one">
       <p>Your Result</p>
       <div class="score"><span>76</span>of 100
@@ -261,7 +261,7 @@
       </div>
 
     </div>
-  </div>
+  </main>
 
 
 
